<resources>
    <string name="app_name">Qldt_Ptit_Android_App_Summer_2023</string>
    <string name="btn_login">Login</string>
    <string name="edt_username">Mssv</string>
    <string name="edt_password">Password</string>
    <string name="mHome">Home</string>
    <string name="mTkb">Thời khóa biểu</string>
    <string name="mDiem">Điểm</string>
    <string name="mLichThi">Lịch thi</string>
    <string name="mInfor">Cá nhân</string>
    <string name="lectureName">Tên giảng viên:</string>
    <string name="studyRoom">Phòng học:</string>
    <string name="timeStudy">Giờ học:</string>
    <string name="midtermScore">Điểm giữa kỳ:</string>
    <string name="examScore">Điểm thi:</string>
    <string name="finalScore">Điểm tổng kết:</string>
    <string name="finalScoreNum">Điểm tổng kết hệ 4:</string>
    <string name="finalScoreChar">Điểm tông kết hệ chữ:</string>
    <string name="examDate">Ngày thi:</string>
    <string name="examRoom">Phòng thi:</string>
    <string name="startExam">Giờ thi:</string>
    <string name="minutes">Số phút:</string>
    <string name="fullname">Họ và tên:</string>
    <string name="mssv">Mã số sinh viên:</string>
    <string name="gender">Giới tính:</string>
    <string name="place_of_birth">Nơi sinh:</string>
    <string name="email">Email:</string>
    <string name="classname">Lớp:</string>
    <string name="major">Chuyên ngành:</string>
    <string name="study_year">Niên khóa:</string>
</resources>