<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="mHome"
        android:title="@string/mHome"
        android:icon="@drawable/ic_baseline_home_24"
        >
    </item>
    <item android:id="mTkb"
        android:title="@string/mTkb"
        android:icon="@drawable/ic_baseline_tkb_24"
        >
    </item>
    <item android:id="mDiem"
        android:title="@string/mDiem"
        android:icon="@drawable/ic_baseline_scoreboard_24"
        >
    </item>
    <item android:id="mLichThi"
        android:title="@string/mLichThi"
        android:icon="@drawable/ic_baseline_assignment_24"
        >
    </item>
    <item android:id="mInfor"
        android:title="@string/mInfor"
        android:icon="@drawable/ic_baseline_infor_24"
        >
    </item>

</menu>