<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="15"
    android:orientation="vertical"
    android:background="@drawable/linear_red"
    >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_gravity="center"
        android:background="@drawable/ptit_log"
        android:layout_marginVertical="60dp"
        android:elevation="20dp"
        >

    </ImageView>


    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="30sp"
        android:hint="@string/edt_username"
        android:background="@drawable/input_shape"
        android:paddingLeft="20dp"
        >
    </EditText>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:inputType="textPassword"
        android:hint="@string/edt_password"
        android:textSize="30sp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:paddingLeft="20dp"

        android:background="@drawable/input_shape"

        >
    </EditText>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/btn_login"
        android:text="@string/btn_login"
        android:textSize="30sp"
        android:paddingHorizontal="90dp"
        android:layout_marginVertical="20dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:shadowDx="5"
        android:shadowDy="5"
        >

    </Button>
</LinearLayout>