<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="15dp"
    android:elevation="50dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_score_sub_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="An toàn và bảo mật hệ thống thông tin"
            android:textColor="@color/white"
            android:background="@color/end_red"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="5dp"
            >
            <TextView
                android:paddingHorizontal="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/midtermScore"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_weight="1"
                >

            </TextView>
            <TextView
                android:id="@+id/txt_midterm_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="@color/end_red"
                android:text="8.5"
                >

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="5dp"
            >
            <TextView
                android:paddingHorizontal="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/examScore"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_weight="1"
                >

            </TextView>
            <TextView
                android:id="@+id/txt_exam_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="@color/end_red"
                android:text="8.5"
                >

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="5dp"
            >
            <TextView
                android:paddingHorizontal="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/finalScore"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_weight="1"
                >

            </TextView>
            <TextView
                android:id="@+id/txt_final_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="@color/end_red"
                android:text="8.5"
                >

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="5dp"
            >
            <TextView
                android:paddingHorizontal="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/finalScoreNum"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_weight="1"
                >

            </TextView>
            <TextView
                android:id="@+id/txt_final_score_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="@color/end_red"
                android:text="8.5"
                >

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="5dp"
            >
            <TextView
                android:paddingHorizontal="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/finalScoreChar"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_weight="1"
                >

            </TextView>
            <TextView
                android:id="@+id/txt_final_score_char"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="@color/end_red"
                android:text="8.5"
                >

            </TextView>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>