<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_green"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:padding="10dp"
    app:cardElevation="10dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/txt_subject_name_lich_thi"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/end_red"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="Nhập môn công nghệ phần mềm"
            >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/examDate"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:paddingVertical="10dp"
                android:textSize="17sp">

            </TextView>

            <TextView
                android:id="@+id/txt_examdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:text="20/11/2023"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textSize="17sp">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/startExam"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:paddingVertical="10dp"
                android:textSize="17sp">

            </TextView>

            <TextView
                android:id="@+id/txt_start_exam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:text="08:00"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textSize="17sp">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minutes"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:paddingVertical="10dp"
                android:textSize="17sp">

            </TextView>

            <TextView
                android:id="@+id/txt_minutes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:text="120 phút"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textSize="17sp">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/examRoom"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:paddingVertical="10dp"
                android:textSize="17sp">

            </TextView>

            <TextView
                android:id="@+id/txt_exam_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:text="G20942918 - 424"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textSize="17sp">

            </TextView>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>