<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="20dp"
    android:layout_margin="10dp"
    >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/txt_subject_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="An toàn và bảo mật hệ thông thông tin"
                android:textColor="@color/start_red"
                android:textAlignment="center"
                android:textSize="20sp"
                android:padding="2dp"
                >
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lectureName"
                    android:textStyle="bold"
                    android:textColor="@color/teal_700"
                    android:textSize="18sp"
                    android:padding="5dp"
                    >
                </TextView>
                <TextView
                    android:id="@+id/txt_lecture_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Phạm thị thúy hằng"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    >

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/studyRoom"
                    android:textSize="18sp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/teal_700"
                    >
                </TextView>
                <TextView
                    android:id="@+id/txt_room_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="209:A2"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    >

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeStudy"
                    android:textSize="18sp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/teal_700"
                    >
                </TextView>
                <TextView
                    android:id="@+id/txt_study_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="14 giờ đến 20 giờ"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    >
                </TextView>
            </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>