<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="@id/avt"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/transparent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="55dp"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="30dp"
        >

        <LinearLayout
            android:id="@+id/wrap_mssv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/mssv"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:id="@+id/txt_user_name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:text="B20DCCN109"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                >

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrap_full_name"
            app:layout_constraintTop_toBottomOf="@id/wrap_mssv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/fullname"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:id="@+id/txt_full_name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:text="Trần Minh Châu"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                >

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/wrap_gender"
            app:layout_constraintTop_toBottomOf="@id/wrap_full_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/gender"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:id="@+id/txt_gender"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:text="Nam"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                >

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrap_place_of_birth"
            app:layout_constraintTop_toBottomOf="@id/wrap_gender"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/place_of_birth"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:id="@+id/txt_place_of_birth"
                android:textStyle="bold"
                android:textSize="15sp"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:text="Hà Tây"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                >

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrap_email"
            app:layout_constraintTop_toBottomOf="@id/wrap_place_of_birth"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/email"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:id="@+id/txt_email"
                android:textStyle="bold"
                android:textSize="15sp"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:text="chautm.b20dcn109@stu.ptit.edu.vn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                >

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/wrap_class"
            app:layout_constraintTop_toBottomOf="@id/wrap_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/classname"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:id="@+id/txt_class"
                android:textStyle="bold"
                android:textSize="15sp"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:text="D20CNPM-01"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                >

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/wrap_major"
            app:layout_constraintTop_toBottomOf="@id/wrap_class"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/major"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:id="@+id/txt_major"
                android:textStyle="bold"
                android:textSize="15sp"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:text="Công nghệ phần mềm"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                >

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/wrap_study_year"
            app:layout_constraintTop_toBottomOf="@id/wrap_major"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/study_year"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:id="@+id/txt_study_year"
                android:textStyle="bold"
                android:textSize="15sp"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:text="2020-2024"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                >

            </TextView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avt"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:src="@drawable/dsk_avt"
        app:civ_border_width="2dp"
        app:civ_border_overlay="true"
        android:cropToPadding="true"
        app:civ_border_color="@color/black"
        android:layout_height="100dp">


    </de.hdodenhof.circleimageview.CircleImageView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@id/avt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="68dp"
        android:src="@drawable/plus"
        android:padding="2dp"
        app:civ_border_color="@color/green"
        app:civ_border_width="0.5dp"
        >

    </de.hdodenhof.circleimageview.CircleImageView>



</androidx.constraintlayout.widget.ConstraintLayout>